assignments/PA3/cool.output
Terminals unused in grammar

    ERROR


State 62 conflicts: 2 shift/reduce
State 65 conflicts: 2 shift/reduce
State 66 conflicts: 2 shift/reduce
State 86 conflicts: 2 shift/reduce
State 94 conflicts: 2 shift/reduce
State 95 conflicts: 2 shift/reduce
State 96 conflicts: 2 shift/reduce
State 97 conflicts: 2 shift/reduce
State 98 conflicts: 2 shift/reduce
State 99 conflicts: 2 shift/reduce
State 100 conflicts: 2 shift/reduce
State 134 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' dummy_feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'
    6      | error ';'

    7 dummy_feature_list: ε
    8                   | dummy_feature_list feature

    9 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   10        | OBJECTID ':' TYPEID optional_assign ';'
   11        | error ';'

   12 formal: OBJECTID ':' TYPEID

   13 formal_list: ε
   14            | formal
   15            | formal_list ',' formal

   16 optional_assign: ε
   17                | ASSIGN expression

   18 expression_list_1: ε
   19                  | expression
   20                  | expression_list_1 ',' expression

   21 expression_list_2: expression ';'
   22                  | expression_list_2 expression ';'
   23                  | error ';'

   24 let: OBJECTID ':' TYPEID optional_assign IN expression
   25    | OBJECTID ':' TYPEID optional_assign ',' let
   26    | error ',' let

   27 case: OBJECTID ':' TYPEID DARROW expression ';'

   28 case_list: case
   29          | case_list case

   30 expression: OBJECTID ASSIGN expression
   31           | expression '@' TYPEID '.' OBJECTID '(' expression_list_1 ')'
   32           | expression '.' OBJECTID '(' expression_list_1 ')'
   33           | OBJECTID '(' expression_list_1 ')'
   34           | IF expression THEN expression ELSE expression FI
   35           | WHILE expression LOOP expression POOL
   36           | '{' expression_list_2 '}'
   37           | LET let
   38           | CASE expression OF case_list ESAC
   39           | NEW TYPEID
   40           | ISVOID expression
   41           | expression '+' expression
   42           | expression '-' expression
   43           | expression '*' expression
   44           | expression '/' expression
   45           | '~' expression
   46           | expression '<' expression
   47           | expression LE expression
   48           | expression '=' expression
   49           | NOT expression
   50           | '(' expression ')'
   51           | OBJECTID
   52           | INT_CONST
   53           | STR_CONST
   54           | BOOL_CONST


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 9 31 32 33 50
    ')' (41) 9 31 32 33 50
    '*' (42) 43
    '+' (43) 41
    ',' (44) 15 20 25 26
    '-' (45) 42
    '.' (46) 31 32
    '/' (47) 44
    ':' (58) 9 10 12 24 25 27
    ';' (59) 4 5 6 9 10 11 21 22 23 27
    '<' (60) 46
    '=' (61) 48
    '@' (64) 31
    '{' (123) 4 5 9 36
    '}' (125) 4 5 9 36
    '~' (126) 45
    error (256) 6 11 23 26
    CLASS (258) 4 5
    ELSE (259) 34
    FI (260) 34
    IF (261) 34
    IN (262) 24
    INHERITS (263) 5
    LET (264) 37
    LOOP (265) 35
    POOL (266) 35
    THEN (267) 34
    WHILE (268) 35
    CASE (269) 38
    ESAC (270) 38
    OF (271) 38
    DARROW (272) 27
    NEW (273) 39
    ISVOID (274) 40
    STR_CONST <symbol> (275) 53
    INT_CONST <symbol> (276) 52
    BOOL_CONST <boolean> (277) 54
    TYPEID <symbol> (278) 4 5 9 10 12 24 25 27 31 39
    OBJECTID <symbol> (279) 9 10 12 24 25 27 30 31 32 33 51
    ASSIGN (280) 17 30
    NOT (281) 49
    LE (282) 47
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5 6
        on right: 2 3
    dummy_feature_list <features> (49)
        on left: 7 8
        on right: 4 5 8
    feature <feature> (50)
        on left: 9 10 11
        on right: 8
    formal <formal> (51)
        on left: 12
        on right: 14 15
    formal_list <formals> (52)
        on left: 13 14 15
        on right: 9 15
    optional_assign <expression> (53)
        on left: 16 17
        on right: 10 24 25
    expression_list_1 <expressions> (54)
        on left: 18 19 20
        on right: 20 31 32 33
    expression_list_2 <expressions> (55)
        on left: 21 22 23
        on right: 22 36
    let <expression> (56)
        on left: 24 25 26
        on right: 25 26 37
    case <case_> (57)
        on left: 27
        on right: 28 29
    case_list <cases> (58)
        on left: 28 29
        on right: 29 38
    expression <expression> (59)
        on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54
        on right: 9 17 19 20 21 22 24 27 30 31 32 34 35 38 40 41 42 43 44 45 46 47 48 49 50


State 0

    0 $accept: • program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error • ';'

    ';'  shift, and go to state 6


State 2

    4 class: CLASS • TYPEID '{' dummy_feature_list '}' ';'
    5      | CLASS • TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program • $end

    $end  shift, and go to state 8


State 4

    1 program: class_list •
    3 class_list: class_list • class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class •

    $default  reduce using rule 2 (class_list)


State 6

    6 class: error ';' •

    $default  reduce using rule 6 (class)


State 7

    4 class: CLASS TYPEID • '{' dummy_feature_list '}' ';'
    5      | CLASS TYPEID • INHERITS TYPEID '{' dummy_feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 8

    0 $accept: program $end •

    $default  accept


State 9

    3 class_list: class_list class •

    $default  reduce using rule 3 (class_list)


State 10

    5 class: CLASS TYPEID INHERITS • TYPEID '{' dummy_feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' • dummy_feature_list '}' ';'

    $default  reduce using rule 7 (dummy_feature_list)

    dummy_feature_list  go to state 13


State 12

    5 class: CLASS TYPEID INHERITS TYPEID • '{' dummy_feature_list '}' ';'

    '{'  shift, and go to state 14


State 13

    4 class: CLASS TYPEID '{' dummy_feature_list • '}' ';'
    8 dummy_feature_list: dummy_feature_list • feature

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 17

    feature  go to state 18


State 14

    5 class: CLASS TYPEID INHERITS TYPEID '{' • dummy_feature_list '}' ';'

    $default  reduce using rule 7 (dummy_feature_list)

    dummy_feature_list  go to state 19


State 15

   11 feature: error • ';'

    ';'  shift, and go to state 20


State 16

    9 feature: OBJECTID • '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   10        | OBJECTID • ':' TYPEID optional_assign ';'

    '('  shift, and go to state 21
    ':'  shift, and go to state 22


State 17

    4 class: CLASS TYPEID '{' dummy_feature_list '}' • ';'

    ';'  shift, and go to state 23


State 18

    8 dummy_feature_list: dummy_feature_list feature •

    $default  reduce using rule 8 (dummy_feature_list)


State 19

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list • '}' ';'
    8 dummy_feature_list: dummy_feature_list • feature

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 24

    feature  go to state 18


State 20

   11 feature: error ';' •

    $default  reduce using rule 11 (feature)


State 21

    9 feature: OBJECTID '(' • formal_list ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 25

    $default  reduce using rule 13 (formal_list)

    formal       go to state 26
    formal_list  go to state 27


State 22

   10 feature: OBJECTID ':' • TYPEID optional_assign ';'

    TYPEID  shift, and go to state 28


State 23

    4 class: CLASS TYPEID '{' dummy_feature_list '}' ';' •

    $default  reduce using rule 4 (class)


State 24

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' • ';'

    ';'  shift, and go to state 29


State 25

   12 formal: OBJECTID • ':' TYPEID

    ':'  shift, and go to state 30


State 26

   14 formal_list: formal •

    $default  reduce using rule 14 (formal_list)


State 27

    9 feature: OBJECTID '(' formal_list • ')' ':' TYPEID '{' expression '}' ';'
   15 formal_list: formal_list • ',' formal

    ')'  shift, and go to state 31
    ','  shift, and go to state 32


State 28

   10 feature: OBJECTID ':' TYPEID • optional_assign ';'

    ASSIGN  shift, and go to state 33

    $default  reduce using rule 16 (optional_assign)

    optional_assign  go to state 34


State 29

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';' •

    $default  reduce using rule 5 (class)


State 30

   12 formal: OBJECTID ':' • TYPEID

    TYPEID  shift, and go to state 35


State 31

    9 feature: OBJECTID '(' formal_list ')' • ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 36


State 32

   15 formal_list: formal_list ',' • formal

    OBJECTID  shift, and go to state 25

    formal  go to state 37


State 33

   17 optional_assign: ASSIGN • expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 52


State 34

   10 feature: OBJECTID ':' TYPEID optional_assign • ';'

    ';'  shift, and go to state 53


State 35

   12 formal: OBJECTID ':' TYPEID •

    $default  reduce using rule 12 (formal)


State 36

    9 feature: OBJECTID '(' formal_list ')' ':' • TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 54


State 37

   15 formal_list: formal_list ',' formal •

    $default  reduce using rule 15 (formal_list)


State 38

   34 expression: IF • expression THEN expression ELSE expression FI

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 55


State 39

   37 expression: LET • let

    error     shift, and go to state 56
    OBJECTID  shift, and go to state 57

    let  go to state 58


State 40

   35 expression: WHILE • expression LOOP expression POOL

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 59


State 41

   38 expression: CASE • expression OF case_list ESAC

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 60


State 42

   39 expression: NEW • TYPEID

    TYPEID  shift, and go to state 61


State 43

   40 expression: ISVOID • expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 62


State 44

   53 expression: STR_CONST •

    $default  reduce using rule 53 (expression)


State 45

   52 expression: INT_CONST •

    $default  reduce using rule 52 (expression)


State 46

   54 expression: BOOL_CONST •

    $default  reduce using rule 54 (expression)


State 47

   30 expression: OBJECTID • ASSIGN expression
   33           | OBJECTID • '(' expression_list_1 ')'
   51           | OBJECTID •

    ASSIGN  shift, and go to state 63
    '('     shift, and go to state 64

    $default  reduce using rule 51 (expression)


State 48

   49 expression: NOT • expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 65


State 49

   45 expression: '~' • expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 66


State 50

   36 expression: '{' • expression_list_2 '}'

    error       shift, and go to state 67
    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression_list_2  go to state 68
    expression         go to state 69


State 51

   50 expression: '(' • expression ')'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 70


State 52

   17 optional_assign: ASSIGN expression •
   31 expression: expression • '@' TYPEID '.' OBJECTID '(' expression_list_1 ')'
   32           | expression • '.' OBJECTID '(' expression_list_1 ')'
   41           | expression • '+' expression
   42           | expression • '-' expression
   43           | expression • '*' expression
   44           | expression • '/' expression
   46           | expression • '<' expression
   47           | expression • LE expression
   48           | expression • '=' expression

    LE   shift, and go to state 71
    '='  shift, and go to state 72
    '<'  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 17 (optional_assign)


State 53

   10 feature: OBJECTID ':' TYPEID optional_assign ';' •

    $default  reduce using rule 10 (feature)


State 54

    9 feature: OBJECTID '(' formal_list ')' ':' TYPEID • '{' expression '}' ';'

    '{'  shift, and go to state 80


State 55

   31 expression: expression • '@' TYPEID '.' OBJECTID '(' expression_list_1 ')'
   32           | expression • '.' OBJECTID '(' expression_list_1 ')'
   34           | IF expression • THEN expression ELSE expression FI
   41           | expression • '+' expression
   42           | expression • '-' expression
   43           | expression • '*' expression
   44           | expression • '/' expression
   46           | expression • '<' expression
   47           | expression • LE expression
   48           | expression • '=' expression

    THEN  shift, and go to state 81
    LE    shift, and go to state 71
    '='   shift, and go to state 72
    '<'   shift, and go to state 73
    '+'   shift, and go to state 74
    '-'   shift, and go to state 75
    '*'   shift, and go to state 76
    '/'   shift, and go to state 77
    '@'   shift, and go to state 78
    '.'   shift, and go to state 79


State 56

   26 let: error • ',' let

    ','  shift, and go to state 82


State 57

   24 let: OBJECTID • ':' TYPEID optional_assign IN expression
   25    | OBJECTID • ':' TYPEID optional_assign ',' let

    ':'  shift, and go to state 83


State 58

   37 expression: LET let •

    $default  reduce using rule 37 (expression)


State 59

   31 expression: expression • '@' TYPEID '.' OBJECTID '(' expression_list_1 ')'
   32           | expression • '.' OBJECTID '(' expression_list_1 ')'
   35           | WHILE expression • LOOP expression POOL
   41           | expression • '+' expression
   42           | expression • '-' expression
   43           | expression • '*' expression
   44           | expression • '/' expression
   46           | expression • '<' expression
   47           | expression • LE expression
   48           | expression • '=' expression

    LOOP  shift, and go to state 84
    LE    shift, and go to state 71
    '='   shift, and go to state 72
    '<'   shift, and go to state 73
    '+'   shift, and go to state 74
    '-'   shift, and go to state 75
    '*'   shift, and go to state 76
    '/'   shift, and go to state 77
    '@'   shift, and go to state 78
    '.'   shift, and go to state 79


State 60

   31 expression: expression • '@' TYPEID '.' OBJECTID '(' expression_list_1 ')'
   32           | expression • '.' OBJECTID '(' expression_list_1 ')'
   38           | CASE expression • OF case_list ESAC
   41           | expression • '+' expression
   42           | expression • '-' expression
   43           | expression • '*' expression
   44           | expression • '/' expression
   46           | expression • '<' expression
   47           | expression • LE expression
   48           | expression • '=' expression

    OF   shift, and go to state 85
    LE   shift, and go to state 71
    '='  shift, and go to state 72
    '<'  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79


State 61

   39 expression: NEW TYPEID •

    $default  reduce using rule 39 (expression)


State 62

   31 expression: expression • '@' TYPEID '.' OBJECTID '(' expression_list_1 ')'
   32           | expression • '.' OBJECTID '(' expression_list_1 ')'
   40           | ISVOID expression •
   41           | expression • '+' expression
   42           | expression • '-' expression
   43           | expression • '*' expression
   44           | expression • '/' expression
   46           | expression • '<' expression
   47           | expression • LE expression
   48           | expression • '=' expression

    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    '@'       [reduce using rule 40 (expression)]
    '.'       [reduce using rule 40 (expression)]
    $default  reduce using rule 40 (expression)


State 63

   30 expression: OBJECTID ASSIGN • expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 86


State 64

   33 expression: OBJECTID '(' • expression_list_1 ')'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    $default  reduce using rule 18 (expression_list_1)

    expression_list_1  go to state 87
    expression         go to state 88


State 65

   31 expression: expression • '@' TYPEID '.' OBJECTID '(' expression_list_1 ')'
   32           | expression • '.' OBJECTID '(' expression_list_1 ')'
   41           | expression • '+' expression
   42           | expression • '-' expression
   43           | expression • '*' expression
   44           | expression • '/' expression
   46           | expression • '<' expression
   47           | expression • LE expression
   48           | expression • '=' expression
   49           | NOT expression •

    LE   shift, and go to state 71
    '='  shift, and go to state 72
    '<'  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    '@'       [reduce using rule 49 (expression)]
    '.'       [reduce using rule 49 (expression)]
    $default  reduce using rule 49 (expression)


State 66

   31 expression: expression • '@' TYPEID '.' OBJECTID '(' expression_list_1 ')'
   32           | expression • '.' OBJECTID '(' expression_list_1 ')'
   41           | expression • '+' expression
   42           | expression • '-' expression
   43           | expression • '*' expression
   44           | expression • '/' expression
   45           | '~' expression •
   46           | expression • '<' expression
   47           | expression • LE expression
   48           | expression • '=' expression

    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    '@'       [reduce using rule 45 (expression)]
    '.'       [reduce using rule 45 (expression)]
    $default  reduce using rule 45 (expression)


State 67

   23 expression_list_2: error • ';'

    ';'  shift, and go to state 89


State 68

   22 expression_list_2: expression_list_2 • expression ';'
   36 expression: '{' expression_list_2 • '}'
